# defi_trading_analysis

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
alembic/: README.md  env.py
config/: settings.py
src/: main.py
src/analyzers/: README.md  cordinator.py  models.py  pattern.py  ratio.py  threshold.py  utils.py  wave.py
src/api/: cache.py  data_transformer.py  dextools.py  exceptions.py  rate_limiter.py  reate_limiter.py  transaction_fetcher.py
src/cli/: report_cli.py
src/core/: README.md  context.py  error_handling.py  events.py  monitoring.py  optimization.py  workflow.py
src/data/: database.py  db_manager.py  integrity.py  logging.py  query.py  repository.py  unit_of_work.py
src/models/: entities.py
src/reports/: README.md  exporter.py  generator.py  visualization.py
src/workflows/: multi_pair_analysis.py  pair_analysis.py
templates/: base_report.html
tests/: conftest.py
tests/data/: test_database.py
tests/models/: test_entities.py
tests/test_api/: test_cache.py  test_dextools_client.py  test_rate_limiter.py
