[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defi-pattern-analyzer"
version = "0.1.0"
description = "Tool for analyzing trading patterns on decentralized exchanges"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.27.0",
    "aiosqlite>=0.17.0",  # For testing
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.6.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.9.0",
    "httpx>=0.24.0",  # For API calls
    "fastapi>=0.95.0",  # For potential API server
    "uvicorn>=0.20.0",  # For serving FastAPI
    "pandas>=1.5.0",    # For data analysis
    "numpy>=1.22.0",    # For numerical operations
    "pytest>=7.0.0",    # For testing
    "pytest-asyncio>=0.20.0"  # For async testing
]

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = ["config", "src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
